# Maze_solving_robot

./: .gitignore  LLM_CONTEXT.md  README.md  README2.md  fix_main.py  fix_shutdown.py  fix_slam.py  fix_syntax.py  frames_2026-04-14_00.30.14.gv
maze_robot/: package.xml  setup.py
maze_robot/launch/: complex_maze_bug2.launch.py  complex_maze_hybrid.launch.py  medium_maze_bug2.launch.py  medium_maze_hybrid.launch.py  simple_maze_bug2.launch.py  simple_maze_hybrid.launch.py
maze_robot/maze_robot/: bug2_baseline_node.py  frontier_node.py  hybrid_algorithm_node.py  logger_node.py  sensor_node.py
maze_robot/rviz/: maze_robot.rviz
maze_robot/urdf/: maze_robot.urdf.xacro
maze_robot/worlds/: maze_complex.world  maze_medium.world  maze_simple.world
