<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_robot</name>
  <version>1.0.0</version>
  <description>Autonomous maze-solving robot – ROS 2 Jazzy / Gazebo Harmonic</description>
  <maintainer email="rosuben1031@gmail.com">mar</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime: core ROS 2 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- Runtime: TF2 Python bindings (needed for tf2_ros in Python nodes) -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- Runtime: simulation bridge -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- Runtime: robot description / state publishing -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Runtime: SLAM -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Runtime: visualisation -->
  <exec_depend>rviz2</exec_depend>

  <!-- Runtime: Python scientific stack (pip-installed; listed for documentation) -->
  <!-- numpy, scipy, matplotlib -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
